docs/tools/cert-manager/self-signed-issuer.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cert-manager-test
---
