docs/tools/cert-manager/staging-issuer.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cert-manager-test
