docs/tools/cert-manager/ingress-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kuard
  namespace: cert-manager-test
  annotations:
    kubernetes.io/ingress.class: "nginx"    
    cert-manager.io/issuer: "letsencrypt-staging"
spec:
  tls:
  - hosts:
    - DOMAIN
    secretName: quickstart-example-tls
  rules:
  - host: DOMAIN
    http:
      paths:
      - path: /
        pathType: Exact
        backend:
          service:
            name: kuard
            port:
              number: 80
---
